# plc-in-haskell

./: .gitignore
chap1/: Intro1.hs  Intro2.hs
chap2/: Intcomp1.hs
chap3/: Absyn.hs  Expr.hs  ExprLex.hs  ExprLex.x  ExprPar.hs  ExprPar.y  Parse.hs
chap3/ExprLang/: Absyn.hs  Expr.hs  ExprLex.hs  ExprLex.x  ExprPar.hs  ExprPar.y  Parse.hs
chap3/UsqlLang/: Absyn.hs  Parse.hs  UsqlLex.hs  UsqlLex.x  UsqlPar.hs  UsqlPar.y
chap4/FunLang/: Absyn.hs  Fun.hs  FunLex.hs  FunLex.x  FunPar.hs  FunPar.y  Parse.hs  ParseAndRun.hs
chap4/TypedFun/: TypedFun.hs
chap5/: Absyn.hs  HigherFun.hs  ParseAndRunHigher.hs  ParseAndType.hs  TypeInference.hs  TypeInference2.hs
chap6/: Naive.hs
chap6/imp/: Naive.hs
chap6/microc/: Absyn.hs  CLex.x  CPar.y  Interp.hs  Parse.hs  ex3.c  ex4.c  ex5.c  ex7.c  ex8.c
exercises/: answers01.tex  answers02.tex  answers02B.tex  answers03.tex  answers04.tex  bprd.sty  exercise01.tex  exercise02.tex  exercise02B.tex  exercise03.tex  exercise04.tex
exercises/answers04/FunLang/: Absyn.hs  Fun.hs  FunLex.hs  FunLex.x  FunPar.hs  FunPar.y
exercises/answers04/TypedFun/: TypedFun.hs
week1/: week1.cabal
week1/CodeW1/: EvalBasic.hs  EvalLet.hs  EvalVars.hs
week1/WeekOne/: week1.cabal
week1/WeekOne-WithAnswers/: week1.cabal
week1/WeekOne-WithAnswers/src/: Week1.lhs
week1/src/: Answers1.hs
week2/CodeW2/: Compilation.hs  StackMachine.hs
week2/LabW2/: week2.cabal
week2/LabW2-WithAns/: week2.cabal
week2/LabW2-WithAns/src/: Answers2.hs  Week2.lhs
week2/LabW2/src/: Intro.hs  Week2.lhs
week3/CodeW3/: Absyn.hs  ExprLex.x  ExprPar.y  Handwritten.hs  README.md
week3/LabW3/: week3.cabal
week3/LabW3-WithAns/: week3.cabal
week3/LabW3-WithAns/src/: Answers3.hs  Compiler.hs  Week3.lhs
week3/LabW3/src/: Compiler.hs  Week3.lhs
week4/CodeW4/: README.md  microML.cabal
week4/CodeW4/src/: Eval.hs  TypeChecking.hs  TypeInference.hs
week4/LabW4/: week4.cabal
week4/LabW4-WithAns/: week4.cabal
week4/LabW4-WithAns/ExprLang/: Compiler.hs  ExprPar.y
week4/LabW4-WithAns/IfExprLang/: IfAbsyn.hs  IfExprLex.x  IfExprPar.y  IfParse.hs
week4/LabW4-WithAns/UsqlLang/: UsqlAbsyn.hs  UsqlPar.y  UsqlParse.hs  grammar.txt
week4/LabW4-WithAns/src/: Answers4.hs  Week4.lhs
week4/LabW4/ExprLang/: Absyn.hs  Parse.hs
week4/LabW4/UsqlLang/: UsqlLex.x
week5/CodeW5/: week5.cabal
week5/CodeW5/imp/: Naive.hs
week5/CodeW5/microc/: Absyn.hs  CPar.y  Interp.hs  Parse.hs  ex10.c  ex2.c  ex3.c  ex4.c
week5/LabW5/: week5.cabal
week5/LabW5-WithAns/: week5.cabal
(+6 files in other folders)
