cabal-version:       2.4

name:                week2
version:             0.1.0.0
license:             NONE
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:  Intro
                    Week2
                    Answers2
  build-depends:       base ^>=4.12.0.0,
  hs-source-dirs:      src
  default-language:    Haskell2010
